--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -3,28 +3,29 @@
   width: 100vw;
   padding: 0;
   border: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Source Sans Pro';
   font-weight: 600;
   font-size: larger;
   text-align: center;
-  background-image: url('/static/06bbb0653f8a43b0f24e1d1d3f37d3e8/8423c/corn-logo.png');
-  background-size: 100%;
-  background-attachment:fixed;
-  background-position: top;
+  background-image: url('/static/b736d2f25ace85635d790f6e8daa6edc/a4672/Backyard.webp');
+  background-size: cover;
+  background-position: top
 }
 /**  
+
 * Christmas Theme: http://www.zingerbugimages.com/backgrounds/red_and_green_stars.gif
 * CornField: https://i.imgur.com/MYJQtez.png
 * Excel: https://i.imgur.com/0TVjvSX.png
+* Backyard: /static/b736d2f25ace85635d790f6e8daa6edc/a4672/Backyard.webp
 */
+
 #site-nav {
   border: 1px solid #000;
   background-color: #8a8888;
 }
 
-#Page {
-  box-shadow: -4px 6px 8px 0px #000000, 0 6px 20px 0 #00000030;
-  border: 1px solid #000;
+article {
+  /* box-shadow: -4px 6px 8px 0px #000000, 0 6px 20px 0 #00000030; */
   text-align: center;
   display: inherit;
   margin-top: 1rem;
@@ -36,16 +37,16 @@
 }
 
 #main {
-  display: block;
+  display: inline-block;
+  max-width: 75vw;
+  border: 2px solid #ccc;
   align-self: center;
-  text-align: center;
-  padding: 8px;
-  margin: 1rem;
-  box-shadow: -2px 8px 16px 0 #00000033, 0 6px 20px 0 #00000030;
-}
-#main p{
-  padding-left: 12px;
-  padding-right: 12px;
+  padding: 12px;
+  margin-block-end: 1rem;
+  /* text-align: center; */
+  /* box-shadow: -2px 8px 16px 0 #00000033, 0 6px 20px 0 #00000030; */
+  /* padding-left: 8px; */
+  /* padding-right: 8px; */
 }
 
 #main a {
@@ -56,13 +57,8 @@
 * bg-info: #17a2b8
 */
 
-#main .pre {
-  font-family: 'Fira Code';
-}
-
 #icons img {
-  box-shadow: none;
-  display: inline-flex;
+  box-shadow: none; 
 }
 
 #mediaImg {
@@ -79,7 +75,7 @@ h3 {
   font-style: bold;
 }
 
-img {
+#media img {
   box-shadow: 0 8px 16px 0 #00000033, 0 6px 20px 0 #00000030;
   margin-bottom: 1rem;
   max-width: 75vw;
@@ -93,3 +89,4 @@ img {
   background-image: url('http://www.zingerbugimages.com/backgrounds/red_and_green_stars.gif');
   background-attachment:fixed;
 }
+
