--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -3,7 +3,7 @@
   width: 100vw;
   padding: 0;
   border: 0;
-  font-family: 'Source Sans Pro';
+  font-family: sans-serif;
   font-weight: 600;
   font-size: larger;
   text-align: center;
