Correct build and directories

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -13,7 +13,7 @@
 }
 /**  
 
-* Christmas Theme: http://www.zingerbugimages.com/backgrounds/red_and_green_stars.gif
+* Christmas Theme: https://www.zingerbugimages.com/backgrounds/red_and_green_stars.gif
 * CornField: https://i.imgur.com/MYJQtez.png
 * Excel: https://i.imgur.com/0TVjvSX.png
 * Backyard: /static/b736d2f25ace85635d790f6e8daa6edc/a4672/Backyard.webp
@@ -86,7 +86,7 @@ h3 {
 }
 
 #HolidayGreeting {
-  background-image: url('http://www.zingerbugimages.com/backgrounds/red_and_green_stars.gif');
+  background-image: url('https://www.zingerbugimages.com/backgrounds/red_and_green_stars.gif');
   background-attachment:fixed;
 }
 
