--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,15 +1,16 @@
 #root {
   margin: 0;
-  width: 100vw;
+  width: 100%;
   padding: 0;
   border: 0;
-  font-family: sans-serif;
-  font-weight: 600;
-  font-size: larger;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 500;
+  font-size: large;
   text-align: center;
-  background-image: url('/static/b736d2f25ace85635d790f6e8daa6edc/a4672/Backyard.webp');
+  background-image: url('/static/corn-logo-06bbb0653f8a43b0f24e1d1d3f37d3e8.PNG');
   background-size: cover;
-  background-position: top
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 /**  
 
@@ -22,6 +23,7 @@
 #site-nav {
   border: 1px solid #000;
   background-color: #8a8888;
+  overflow: hidden;
 }
 
 article {
@@ -30,6 +32,13 @@ article {
   display: inherit;
   margin-top: 1rem;
   margin-bottom: 1rem;
+}
+
+#table {
+  max-width: 75vw;
+  font-style: normal;
+  font-size: 12px;
+  flex: auto;
 }
 
 #Landing {
@@ -41,8 +50,9 @@ article {
   max-width: 75vw;
   border: 2px solid #ccc;
   align-self: center;
-  padding: 12px;
+  padding: 1rem;
   margin-block-end: 1rem;
+  overflow: auto;
   /* text-align: center; */
   /* box-shadow: -2px 8px 16px 0 #00000033, 0 6px 20px 0 #00000030; */
   /* padding-left: 8px; */
