--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -7,7 +7,7 @@
   font-weight: 500;
   font-size: large;
   text-align: center;
-  background-image: url('/static/corn-logo-06bbb0653f8a43b0f24e1d1d3f37d3e8.PNG');
+  background-image: url('/static/06bbb0653f8a43b0f24e1d1d3f37d3e8/a4672/corn-logo.webp');
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
