--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -3,7 +3,7 @@
   width: 100%;
   padding: 0;
   border: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: Verdana, sans-serif;
   font-weight: 500;
   font-size: large;
   text-align: center;
@@ -47,7 +47,7 @@ article {
 }
 
 #main {
-  display: inline-block;
+  display: block;
   max-width: 100vw;
   border: 2px solid #ccc;
   align-self: center;
@@ -60,8 +60,8 @@ article {
   /* padding-right: 8px; */
 }
 
-#main a {
-  color: #0563c1;
+a {
+  color: #c92c2c;
 } 
 /** 
 * Red: #c92c2c 
@@ -105,4 +105,3 @@ h3 {
   background-image: url('https://www.zingerbugimages.com/backgrounds/red_and_green_stars.gif');
   background-attachment:fixed;
 }
-
