--- a/src/templates/PrismTheme.css
+++ b/src/templates/PrismTheme.css
@@ -18,18 +18,18 @@
  pre[class*="language-"] {
   color: #f8f9fa;
    background: none;
-   font-family: 'Courier New', Courier, monospace;
+   font-family: Consolas,SFMono-Regular,Menlo,Monaco,"Liberation Mono","Courier New",monospace;
    font-size: 100%;
    text-align: left;
-   white-space: pre;
-   word-spacing: normal;
+    white-space: pre;
+    word-spacing: normal;
    word-break: normal;
    word-wrap: normal;
    line-height: 1.20;
  
-   -moz-tab-size: 4;
-   -o-tab-size: 4;
-   tab-size: 4;
+   -moz-tab-size: 2;
+   -o-tab-size: 2;
+   tab-size: 2;
  
    -webkit-hyphens: none;
    -moz-hyphens: none;
