--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -27,7 +27,10 @@
   --breakpoint-xl: 1200px;
   --font-family-sans-serif: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
   --font-family-monospace: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
-} */
+} 
+
+Note: don't surround css relative paths in quotes
+*/
 
 #root {
   margin: 0;
@@ -37,7 +40,7 @@
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 500;
   /* font-size: large; */
-  background-image: url('/static/06bbb0653f8a43b0f24e1d1d3f37d3e8/a4672/corn-logo.webp');
+  background-image: url(/static/06bbb0653f8a43b0f24e1d1d3f37d3e8/8423c/corn-logo.png);
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -58,8 +61,8 @@
 }
 
 article {
-  /* box-shadow: -4px 6px 8px 0px #000000, 0 6px 20px 0 #00000030; 
-  text-align: center;*/
+  /* box-shadow: -4px 6px 8px 0px #000000, 0 6px 20px 0 #00000030; */
+  text-align: center;
   display: inherit;
   margin-top: 1rem;
   margin-bottom: 1rem;
@@ -94,15 +97,6 @@ a {
 #icons img {
   /* <div id="icons" className="row nav-item"> */
   box-shadow: none;
-}
-
-#media-container {
-  max-width: 75vw;
-}
-
-#mediaImg {
-  /* <img id="mediaImg" className="img-thumbnail" src={"https://avatars2.githubusercontent.com/u/36834793?v=4"} alt="Patrick" /> */
-  max-width: 50vw;
 }
 
 #brand {
