--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -99,6 +99,20 @@ a {
   box-shadow: none;
 }
 
+table, td {
+  background-color: #f8f9fa;
+  border: solid #6c757d;
+  padding: 8px;
+  margin-block-end: 1rem;
+}
+
+th{
+  text-align: center;
+  background-color: #f92672;
+  color: #FFF;
+  padding: 8px;
+}
+
 #brand {
   color: #fff;
   fill: #fff;
